--- a/premo2004_rr.bib
+++ b/premo2004_rr.bib
@@ -35,6 +35,32 @@
   Url                      = {http://www.jstor.org/stable/279989}
 }
 
+@Book{Dale2014,
+  Title                    = {Spatial Analysis: A Guide for Ecologists},
+  Author                   = {Dale, M.R.T. and Fortin, M.J.},
+  Publisher                = {Cambridge University Press},
+  Year                     = {2014},
+  Edition                  = {Second Edition},
+
+  ISBN                     = {9781139991445},
+  Keywords                 = {Spatial Analysis, Ecological modelling,},
+  Owner                    = {dncgst},
+  Timestamp                = {2016.08.19}
+}
+
+@Article{Getis1992,
+  Title                    = {The analysis of spatial association by use of distance statistics},
+  Author                   = {A. Getis and J.K. Ord},
+  Journal                  = {Geographical Analysis},
+  Year                     = {1992},
+  Pages                    = {189–206},
+  Volume                   = {24},
+
+  Keywords                 = {Spatial Analysis, Spatial Autocorrelation,},
+  Owner                    = {dncgst},
+  Timestamp                = {2016.08.25}
+}
+
 @Article{Kvamme1990,
   Title                    = {Spatial Autocorrelation and the Classic Maya Collapse revisited: Refined techniques and new conclusions},
   Author                   = {Kenneth L. Kvamme},
@@ -51,6 +77,22 @@
   Owner                    = {dncgst},
   Timestamp                = {2016.07.15},
   Url                      = {http://www.sciencedirect.com/science/article/pii/030544039090059E}
+}
+
+@InCollection{Neiman1997,
+  Title                    = {Conspicuous consumption as wasteful advertising: a Darwinian perspective on spatial patterns in ClClassic Maya terminal monument dates},
+  Author                   = {F. D. Neiman},
+  Booktitle                = {Rediscovering Darwin: Evolutionary Theory and Archaeological Explanation},
+  Publisher                = {American Anthropological Association},
+  Year                     = {1997},
+  Editor                   = {C. Barton and  G. Clark},
+  Pages                    = {267--290},
+  Series                   = {Archaeological Papers of the American Anthropological Association},
+  Volume                   = {7},
+
+  Keywords                 = {Spatial Analysis, Maya,},
+  Owner                    = {dncgst},
+  Timestamp                = {2016.08.25}
 }
 
 @Article{Premo2004,
