--- a/src/premo2004_spR_spatial_autocorrelation.Rmd
+++ b/src/premo2004_spR_spatial_autocorrelation.Rmd
@@ -67,14 +67,18 @@ library(spdep)
 
 ```{r}
 # graph-based neighbours
+# > All the graph-based neigbour schemes always ensure that all the points will have at least one neighbour. [@Bivand2008, p.246]
 # > Note that graph-based representations contruct the interpoint relationships based on Euclidean distance, with no option to use Great Circle distances for geographical coordinates. [@Bivand2008, p.244]
 library(tripack)
-## Delauney triangulation neighbours
+## Delaunay triangulation neighbours
+# > The neighbour relationships are defined by the triangulation, which extends outwards to the convex hull of the points.
 X_del <- tri2nb(coords, row.names=id)
 X_del <- deldir::deldir(as.data.frame(coords), plotit=TRUE, main="Delauney triangulation neighbours")
 ## Sphere of Influence neighbours
+# > SOI thins the triangulation, removing links that are relatively long. Delaunay and SOI neighbours are symmetric by design: if i is a neighbour of j, then j is a neighbour of i.
 X_soi <- graph2nb(soi.graph(X_del, coords), row.names=id)
 ## Gabriel graph neighbours
+# > Gabeial graph is also a subgraph of the Delaunay triangulation, retaining a different set of neigbours. It does not, however, guarantee symmetry.
 X_gab <- graph2nb(gabrielneigh(coords), row.names=id)
 plot(X$Easting..km., X$Northing..km., xlim=c(0,400), asp=1, main="Gabriel graph neighbours")
 plot(X_gab, coords, add=TRUE)
@@ -82,9 +86,10 @@ plot(X_gab, coords, add=TRUE)
 X_rel <- graph2nb(relativeneigh(coords), row.names=id)
 plot(X$Easting..km., X$Northing..km., xlim=c(0,400), asp=1, main="Relative graph neighbours")
 plot(X_rel, coords, add=TRUE)
+is.symmetric.nb(X_rel) #force=TRUE if the symmetry attribute is to be overridden
 
 # distance-based neighbours
-# > An alternative method is to choose the k nearest neighbours [...] knearneigh can also take a longlat argument to handle geographical coordinates. [@Bivand2008, p.246]
+# > An alternative method is to choose the k nearest neighbours - this adapts across the study area, taking account of differences in the densities of areal entities. Naturally, in the overwhelming majority of cases, it leads to asymmetric neighbours, but will ensure that all areas have k neighbours. [...] knearneigh can also take a longlat argument to handle geographical coordinates. [@Bivand2008, p.246]
 ## k nearest neighbour
 X_kn1 <- knn2nb(knearneigh(coords, k=1), row.names=id)
 plot(X$Easting..km., X$Northing..km., xlim=c(0,400), asp=1, main="K nearest neighbour (k=1)")
@@ -118,22 +123,26 @@ X_nb_lags <- nblag(X_kn1, maxlag=2)
 
 > [...] the second is to assign weights to the identified neighbour links [@Bivand2008, p.239]
 
+> Once the list of sets of neighbours for our study area is established, we proceed to assign spatial weights to each relationship. If we know little about the assumed spatial process, we try to avoid moving far from the binary representation of a weight of unity for neighbours, and zero otherwise. [@Bivand2008, p.251]
+
 > In the same way that the choise of the criteria to define neighbours may affect the results in testing or modelling of the use of weights constructed from those neighbours, results maybe also be changed by the choise of weights style. [@Bivand2008, p.253]
 
 ```{r}
 # > The nb2listw function takes a neighbours list object and convert it into a weights object. The default conversion style is W, where the weights for each areal entity are standardised to sum to unity [@Bivand2008, p.251]
+
+## W style, the weights vary between unity divided by the largest and smallest numbers of neighbours, and the sum of weights for each areal entity are unity. The weights for links originating at areas with few neighbours are larger than those originating at areas with many neighbours.
 X_lw_W <- nb2listw(X_nb75, style="W")
 
-# B style (binary)
+## B style (binary), retains a weight of unity for each neighbour relationship, but in this case, the sum of weights for areas ddiffer according to the numbers of neighbour areas have.
 X_lw_B <- nb2listw(X_nb75, style="B")
 
-# C style
+# C style, the complete set of C weights sums to the number of areas.
 X_lw_C <- nb2listw(X_nb75, style="C")
 
-# U style
+# U style, U weights sum to unity.
 X_lw_U <- nb2listw(X_nb75, style="U")
 
-# S style
+# S style, the variance-stabilising coding scheme seeks to moderate the conflicting impacts. 
 X_lw_S <- nb2listw(X_nb75, style="S")
 ```
 
@@ -164,8 +173,8 @@ I
 ```{r}
 # global tests
 ## Moran's I
-set.seed(123456)
-I_mc <- moran.mc(spX$Date..AD., listw=nb2listw(X_nb75, style="W"), 99)
+set.seed(1234)
+I_mc <- moran.mc(spX$Date..AD., listw=nb2listw(X_nb75, style="W"), nsim=99)
 I_mc$res
 foo <- I_mc$res[1:length(I_mc$res)-1] #remove the last element
 bar <- density(foo)
